[package]
name = "rkyv_intern"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.11", optional = true }
rkyv = "0.7"

[features]
default = ["std"]
alloc = ["hashbrown"]
std = ["alloc"]
